# stream-downloader-rust

./: .gitignore  Cargo.toml  DISCLAIMER.md  Makefile  README.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml
_docs/: sites.md
crates/stream-dl/: Cargo.toml
crates/stream-dl/src/: main.rs
crates/stream-downloader/: Cargo.toml
crates/stream-downloader/src/: client.rs  download.rs  error.rs  hls.rs  lib.rs  merge.rs  model.rs  naming.rs  page.rs  progress.rs  quality.rs
crates/stream-downloader/src/extract/: engine.rs  generic.rs  json.rs  mod.rs  profile.rs  profiles.rs
crates/stream-downloader/src/innertube/: client.rs  config.rs  formats.rs  mod.rs  page.rs
crates/stream-downloader/src/sites/: common.rs  mod.rs  ok.rs  okxxx.rs  plugin.rs  pornhub.rs  registry.rs  rutube.rs  vimeo.rs  vk.rs  xnxx.rs  youtube.rs
crates/stream-downloader/src/sites/patterns/: html5player.rs  mod.rs
crates/stream-downloader/src/sites/yandex/: mod.rs  preview.rs  vh.rs
crates/stream-downloader/tests/: yandex.rs  youtube.rs
crates/stream-downloader/tests/fixtures/: pornhub_flashvars.html  vimeo_files.json  vk_al_video.html  xnxx_player.html  yandex_preview.html  yandex_vh_player.json  youtube_innertube.json  youtube_watch.html
scripts/: install.sh  release-tag.sh
