[workspace]
resolver = "2"
members = ["crates/stream-downloader", "crates/stream-dl"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "cookies", "json"] }
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ffmpeg-sidecar = "2.3"
thiserror = "2.0"
tokio = { version = "1.43", features = ["fs", "macros", "rt-multi-thread"] }
url = "2.5"
